@@ -1,3 +1,0 @@
-Grail(TM) is a web browser written in Python, an object-oriented
-scripting language. Grail is from the Center for National Research
-Initiatives. See share/misc/grail-0.6/LICENSE for the license terms.
